# adversarial_attacking_mnist

./: .gitignore  README.md  TODO.todo  interactive_result.ipynb  main.py  pyproject.toml  requirements.txt
adversarial_attack/: generate.py  mnist_model.py  visualize.py
hyper-parameters/: hyperparameter.yaml  sweep.yaml
models/: base_fc.pth
tests/: conftest.py  test_model.py
